--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r EduInsights/requirements.txt
+          pip install -r requirements.txt
 
       - name: Format code with black
         run: |
