--- a/requirements.txt
+++ b/requirements.txt
@@ -33,28 +33,23 @@ h11==0.14.0
 h5py==3.11.0
 httplib2==0.22.0
 idna==3.7
-imutils==0.5.4
 ipykernel==6.29.4
 ipython==8.23.0
 jedi==0.19.1
 joblib==1.4.0
 jupyter_client==8.6.1
 jupyter_core==5.7.2
-keras==3.3.2
 kiwisolver==1.4.5
 libclang==18.1.1
 Markdown==3.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
-matplotlib==3.8.4
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 ml-dtypes==0.3.2
 namex==0.0.8
 nest-asyncio==1.6.0
-numpy==1.26.4
 oauthlib==3.2.2
-opencv-python==4.9.0.80
 openpyxl==3.1.2
 opt-einsum==3.3.0
 optree==0.11.0
@@ -63,7 +58,6 @@ packaging==24.0
 pandas==2.2.2
 parso==0.8.4
 pexpect==4.9.0
-pillow==10.3.0
 platformdirs==4.2.0
 prompt-toolkit==3.0.43
 proto-plus==1.23.0
@@ -80,7 +74,6 @@ PyMuPDF==1.24.2
 PyMuPDFb==1.24.1
 pyparsing==3.1.2
 PySocks==1.7.1
-pytesseract==0.3.10
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
@@ -100,7 +93,7 @@ stack-data==0.6.3
 starlette==0.37.2
 tensorboard==2.16.2
 tensorboard-data-server==0.7.2
-tensorflow==2.16.1
+tensorflow-io-gcs-filesystem==0.36.0
 termcolor==2.4.0
 threadpoolctl==3.4.0
 tornado==6.4
