--- a/requirements.txt
+++ b/requirements.txt
@@ -49,6 +49,7 @@ mdurl==0.1.2
 ml-dtypes==0.3.2
 namex==0.0.8
 nest-asyncio==1.6.0
+numpy==1.26.4
 oauthlib==3.2.2
 openpyxl==3.1.2
 opt-einsum==3.3.0
@@ -91,6 +92,9 @@ sortedcontainers==2.4.0
 SQLAlchemy==2.0.29
 stack-data==0.6.3
 starlette==0.37.2
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
+tensorflow-io-gcs-filesystem==0.36.0
 termcolor==2.4.0
 threadpoolctl==3.4.0
 tornado==6.4
