--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,14 +18,11 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Install dependencies
+      - name: Install Poetry
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          curl -sSL https://install.python-poetry.org | python -
 
-      - name: Format code with black
-        run: |
-          pip install black
-          black .
+      - name: Install dependencies
+        run: poetry install
 
       # Add more checks here as needed
