--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,12 +19,10 @@ repos:
       - id: isort
         args: ["--profile", "black", "--filter-files"]
 
-  - repo: https://github.com/pycqa/flake8
-    rev: 7.0.0
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
+    rev: v0.4.3
     hooks:
-      - id: flake8
-        args: ["--config=.flake8", "--ignore=E501,W503"]
-        additional_dependencies: ["flake8-bandit", "flake8-bugbear"]
+      - id: ruff
 
   - repo: https://github.com/asottile/pyupgrade
     rev: v3.15.2
