DB, Pydantic, utils, apis added/updated
1. DB updated: added department table removed users
2. pydantic schemas: added department, batch
3. Utils: added utilities for departments, batches
4. APIs: added api endpoints for departments, batches

Fixed some errors in DB relationship and models.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,7 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.black]
-line-length = 79
+line-length = 88
 target-version = ['py37']
 include = '\.pyi?$'
 exclude = '''
@@ -90,4 +90,5 @@ exclude = [
     "node_modules",
     "venv",
     "alembic",
+    "db/models",
 ]
