✅ Changed file structure, extraction endpoints added resolve #43 resolve #35 resolve #22 resolve #13 Changes made: - changed the strcuture: cannot open `strcuture' (No such file or directory) - implemented  and  endpoints to extraction APIs - implmented the scraping by  ->  and  for - solved bugs - decided to drop threading because of multiple problems in extraction table updating and no enhancement of execution time - implemented extractions table which updates every 5 students scraped which can serve as progress bar tracker in frontend - implemented extraction scraper as a background task allowing for multiple requests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,7 +68,7 @@ exclude = '''
 line-length = 88
 
 select = ["E", "F", "W"]
-ignore = ["E501"]
+ignore = ["E501", "E712"]
 exclude = [
     ".bzr",
     ".direnv",
