🛳 Docker container running | Changes made to suit dockerization | Scrapy Implemented but ❌ | resolve #52 resolve #47 - Docker 🛳: added images for api, postgres db, pgadmin4 - Made changes to code: to suit dockerization - Implmented scrapy: realised it is not suitable for solving captchas❌

--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,5 @@ Driver/chromedriver-mac-x64.zip
 Driver/.DS_Store
 Driver/chromedriver-mac-x64/chromedriver
 Driver/chromedriver-mac-x64/LICENSE.chromedriver
+Credentials/OAuth-Credentials.json
+Credentials
