--- a/alembic.ini
+++ b/alembic.ini
@@ -58,7 +58,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql+asyncpg://postgres:123456@localhost/eduinsights
+sqlalchemy.url =
 
 
 [post_write_hooks]
