--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ fastapi = "^0.111.0"
 uvicorn = "^0.29.0"
 pymupdf = "^1.24.2"
 requests = "^2.31.0"
-selenium = "^4.20.0"
+selenium = "^4.21.0"
 sqlalchemy = "^2.0.29"
 tqdm = "^4.66.4"
 google-api-python-client = "^2.127.0"
@@ -23,6 +23,7 @@ psycopg2-binary = "^2.9.9"
 sqlalchemy-utils = "^0.41.2"
 alembic = "^1.13.1"
 asyncpg = "^0.29.0"
+python-dotenv = "^1.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
