--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,9 @@ sqlalchemy-utils = "^0.41.2"
 alembic = "^1.13.1"
 asyncpg = "^0.29.0"
 python-dotenv = "^1.0.1"
+celery = "^5.4.0"
+redis = "^5.0.4"
+flower = "^2.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
