Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,6 @@ check:
     - apt-get install -y curl
     - curl -sSL https://install.python-poetry.org | python -
   script:
-    - poetry install
+    - poetry --version
   only:
     - main
