--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ stages:
   - check
 
 variables:
-  PYTHON_VERSION: "3.11"
+  PYTHON_VERSION: "3.10"  # Specify the Python version you need
 
 check:
   stage: check
@@ -10,8 +10,10 @@ check:
   before_script:
     - apt-get update
     - apt-get install -y curl
-    - curl -sSL https://install.python-poetry.org | python -
+    - curl -sSL https://install.python-poetry.org | python3 -
+    - export PATH="$HOME/.local/bin:$PATH"  # Add Poetry to the PATH
   script:
-    - poetry --version
+    - poetry --version  # Verify Poetry installation
+    - poetry install
   only:
     - main
